Minor change to test GitHub Webhook

--- a/cloudapp/src/app/main/main.component.html
+++ b/cloudapp/src/app/main/main.component.html
@@ -8,7 +8,7 @@
 <p></p>
 <div *ngIf="this.bibEntities.length > 0; else nobib">
 
-  <h3>Pick records to print:</h3>
+  <h3>Select record(s) to print:</h3>
   <div *ngFor="let entity of bibEntities" id="list-of">
     <mat-checkbox [value]="entity.id"
     (change)="listChange($event)" [checked]="bibHtmls[entity.id]" 
