Support Columnar Format printing
The XSL now runs on a collection of Bib records (instead of running for each record seperatly and then combining the HTMLs)

--- a/cloudapp/src/app/main/main.component.html
+++ b/cloudapp/src/app/main/main.component.html
@@ -15,7 +15,7 @@
   <h3>Select record(s) to print:</h3>
   <div *ngFor="let entity of bibEntities" id="list-of">
     <mat-checkbox [value]="entity.id"
-    (change)="listChange($event)" [checked]="bibHtmls[entity.id]" 
+    (change)="listChange($event)" [checked]="bibHash[entity.id]" 
     >{{entity.description}}</mat-checkbox>
   </div> 
 
