--- a/cloudapp/src/app/settings/settings.component.html
+++ b/cloudapp/src/app/settings/settings.component.html
@@ -14,8 +14,8 @@
     <mat-form-field>
         <mat-label>XSL File to convert MARCXML to HTML</mat-label>
         <select matNativeControl #filenameSelected >
-          <option value="MARC21slim2English.xsl"    [selected]="optionSelected =='MARC21slim2English.xsl'"  >MARC21slim2English.xsl</option>
-          <option value="MARC21demo.xsl"            [selected]="optionSelected =='MARC21demo.xsl'"          >MARC21demo.xsl</option>
+          <option value="MARC21slim2English.xsl"   [selected]="optionSelected =='MARC21slim2English.xsl'"   >MARC21slim2English.xsl</option>
+          <option value="MARC21ColumnarFormat.xsl" [selected]="optionSelected =='MARC21ColumnarFormat.xsl'" >MARC21ColumnarFormat.xsl</option>
         </select>
     </mat-form-field>
     <div class="commands-container">
