--- a/cloudapp/src/app/config/config.component.scss
+++ b/cloudapp/src/app/config/config.component.scss
@@ -29,8 +29,14 @@ div.title a {
   margin-right: 10px;
 }
 
-
-
 textarea.xsl-edit {
   height: 200px;
+}
+
+textarea.xml-record {
+  height: 100px;
+}
+
+.float-right {
+  float:right;
 }
