--- a/cloudapp/src/app/config/config.component.html
+++ b/cloudapp/src/app/config/config.component.html
@@ -15,22 +15,45 @@
       </mat-form-field>
       <mat-form-field>
         <mat-label>XSL (enlarge the screen for easy editing)</mat-label>
-        <textarea matInput class="xsl-edit" placeholder="Your XSL here" [value]="lib_xsl_val_0" (input)="lib_xsl_val_0 = $event.target.value"></textarea>
+        <textarea matInput class="xsl-edit" placeholder="Your XSL here" [value]="lib_xsl_val_0" (input)="lib_xsl_val_0 = $event.target.value"></textarea> <!--(change)="runXsl()"-->
       </mat-form-field>
     </div>
 
-    <mat-form-field>
-      <mat-label>Pick a file to use as a starting point:</mat-label>
-      <select matNativeControl #filenameSelected id="xslFiles">
-        <option *ngFor="let xslFile of xslFiles; let i = index"
-          [value]="xslFiles[i].id"
-          [selected]="optionSelected == xslFiles[i].id">
-          {{xslFiles[i].name}}
-        </option>
-      </select>
-    </mat-form-field>
+    <mat-accordion>
+      <mat-expansion-panel>
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+            Preview the generated HTML
+          </mat-panel-title>
+          <!-- <mat-panel-description>Enlarge the screen for easy editing</mat-panel-description> -->
+        </mat-expansion-panel-header>
+        <h3>Sample MARCXML (2 records):</h3>
+        <textarea matInput class="xml-record" [value]="sampleMarcxml" (input)="sampleMarcxml = $event.target.value"></textarea>
+        <h3>Result:</h3>
+        <button class="float-right" mat-stroked-button (click)="runXsl()" type="button"> Refresh </button>
+        <div id="record-preview" [innerHTML]="formattedRecord"></div>
+      </mat-expansion-panel>
 
-    <button (click)="loadStartingPoint(filenameSelected.value)" type="button" mat-stroked-button>Load</button>
+      <mat-expansion-panel>
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+            Pick an XSL file to use as a starting point
+          </mat-panel-title>
+          <!-- <mat-panel-description>Start with one of the built-in XSLs</mat-panel-description> -->
+        </mat-expansion-panel-header>
+        <mat-form-field>
+          <mat-label>Pick a file to use as a starting point:</mat-label>
+          <select matNativeControl #filenameSelected id="xslFiles">
+            <option *ngFor="let xslFile of xslFiles; let i = index"
+              [value]="xslFiles[i].id"
+              [selected]="optionSelected == xslFiles[i].id">
+              {{xslFiles[i].name}}
+            </option>
+          </select>
+        </mat-form-field>
+        <button (click)="loadStartingPoint(filenameSelected.value)" type="button" mat-stroked-button>Load</button>
+      </mat-expansion-panel>
+    </mat-accordion>
 
     <div class="commands-container">
       <button mat-stroked-button (click)="save()" type="button" [disabled]="saving">Save</button>
@@ -39,3 +62,6 @@
     </div>
 
   </form>
+
+
+  
