--- a/cloudapp/src/app/settings/settings.component.html
+++ b/cloudapp/src/app/settings/settings.component.html
@@ -9,7 +9,7 @@
 <form>
     <mat-form-field>
         <mat-label>XSL File to transform MARCXML</mat-label>
-        <select matNativeControl #filenameSelected id="xslFiles">
+        <select matNativeControl #filenameSelected id="xslFiles" #mySelect (change)='onSelectXsl(mySelect.value)'>
           <option *ngFor="let xslFile of xslFiles; let i = index"
             [value]="xslFiles[i].id"
             [selected]="optionSelected == xslFiles[i].id">
@@ -18,9 +18,10 @@
         </select>
     </mat-form-field>
     
-    <div class="commands-container">
-        <button (click)="onSaveBtnClicked(filenameSelected.value)" type="button" mat-stroked-button [disabled]="saving">Save</button>
-        <mat-spinner diameter="30" class="spinner" *ngIf="saving"></mat-spinner>
-    </div>
+    &nbsp;
+    <button class="save-button" (click)="onSaveBtnClicked(filenameSelected.value)" type="button" mat-stroked-button [disabled]="saving">Save</button>
+    <mat-spinner diameter="30" class="spinner" *ngIf="saving"></mat-spinner>
 </form>
 
+<h3>Preview:</h3>
+<div id="record-preview" [innerHTML]="formattedRecord" id="record-preview"></div>
