--- a/cloudapp/src/app/config/config.component.html
+++ b/cloudapp/src/app/config/config.component.html
@@ -44,8 +44,7 @@
           <mat-label>Pick a file to use as a starting point:</mat-label>
           <select matNativeControl #filenameSelected id="xslFiles">
             <option *ngFor="let xslFile of xslFiles; let i = index"
-              [value]="xslFiles[i].id"
-              [selected]="optionSelected == xslFiles[i].id">
+              [value]="xslFiles[i].id">
               {{xslFiles[i].name}}
             </option>
           </select>
