--- a/cloudapp/src/app/main/main.component.html
+++ b/cloudapp/src/app/main/main.component.html
@@ -7,6 +7,7 @@
 <div *ngIf="this.bibEntities.length > 0; else nobib">
 
   <h3>Select record(s) to print:</h3>
+  <mat-checkbox (change)="OnSelectOrUnselectAll($event)">All</mat-checkbox>
   <div *ngFor="let entity of bibEntities" id="list-of">
     <mat-checkbox [value]="entity.id"
     (change)="onListChanged($event)" [checked]="bibHash[entity.id]" 
