--- a/cloudapp/src/app/main/main.component.html
+++ b/cloudapp/src/app/main/main.component.html
@@ -31,7 +31,7 @@ Debug:
       <mat-card-title>Page Entity</mat-card-title>
     </mat-card-header>
     <mat-card-content>
-      <pre>{{ pageEntities | json }}</pre>
+      <pre>{{ entities$ | async | json }}</pre>
     </mat-card-content>
   </mat-card>
 </section>
